--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,8 +46,8 @@
   </div>
   
   <div class="row">
-    <div class="col-md-6">
-      <table>
+    <div class="col-md-6 mx-auto">
+      <table class="table text-center mt-5">
         <thead>
           <tr>
             <td># Fila</td>
