--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,14 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.green-snackbar {
+    background-color: rgb(0, 216, 0);
+    color: #fff;
+}
+
+
+.red-snackbar {
+    background-color: rgb(230, 69, 69);
+    color: #fff;
+}
