--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 
           <mat-form-field class="flex-fill" appearance="fill">
             <mat-label>Contato:</mat-label>
-            <input type="tel" matInput placeholder="" formControlName="contato" >
+            <input type="text" mask="(00) 00000-0000" matInput placeholder="" formControlName="contato" >
           </mat-form-field>
         </div>
 
